kubernetes/traefik/traefik-forward-auth/traefik-forward-auth-deployment.yaml
---
## AUTHENTICATION ##
# Using Traefik-Forward-Auth linked back to Entra ID
# See https://github.com/thomseddon/traefik-forward-auth for examples & details
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik
  labels:
    app: traefik-forward-auth
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll            
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/match-tag: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik-forward-auth
        image: thomseddon/traefik-forward-auth:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
          seccompProfile:
            type: RuntimeDefault
        imagePullPolicy: Always
        ports:
        - containerPort: 4181
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "32Mi"
            cpu: "25m"
