kubernetes/traefik/traefik-forward-auth/traefik-forward-auth-ingress.yaml
---
# auth.timo.be ingress
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.kubernetes.timo.be`) || Host(`auth.timo.be`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: auth
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
  - protocol: TCP
    port: 4181
    targetPort: 4181
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: traefik
spec:
  forwardAuth:
    # If traefik-forward-auth is deployed in different namespace, it would be traefik-forward-auth.<namespace>:4181
    address: http://traefik-forward-auth:4181
    authResponseHeaders:
      - X-Forwarded-User
    headerField: X-Forwarded-User
    maxResponseBodySize: 65536
    trustForwardHeader: true
